# narabas

./: README.md  config.fit.yaml  export-onnx.py  pyproject.toml  trainer.py
narabas/: __init__.py  datamodule.py  model.py  narabas.py
tests/: narabas_test.py
tests/fixtures/: README.md
