[tool.poetry]
name = "narabas"
version = "0.1.0"
description = ""
authors = ["Yoji Shidara <dara@shidara.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.9.2"
torchaudio = "^0.13.1"
onnxruntime = "^1.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
datasets = "^2.9.0"
pytorch-lightning = {extras = ["extra"], version = "^1.9.2"}
soundfile = "^0.12.1"
llvmlite = "^0.39.1"
numba = "^0.56.4"
pyopenjtalk = "^0.3.0"
jiwer = "^2.5.1"
onnx = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
